themedir     = $(datadir)/themes
adaptadir    = $(DESTDIR)$(themedir)/Adapta
briladir     = $(DESTDIR)$(themedir)/Adapta-Brila
noktodir     = $(DESTDIR)$(themedir)/Adapta-Nokto
adaptaetadir = $(DESTDIR)$(themedir)/Adapta-Eta
brilaetadir  = $(DESTDIR)$(themedir)/Adapta-Brila-Eta
noktoetadir  = $(DESTDIR)$(themedir)/Adapta-Nokto-Eta

metacitydir   = $(srcdir)/metacity-1
metacity_xml_file = \
	$(metacitydir)/dark/metacity-theme-2.xml \
	$(metacitydir)/dark/metacity-theme-3.xml
metacity_asset_file = \
	$(metacitydir)/dark/button_close_prelight.svg \
	$(metacitydir)/dark/button_close_pressed.svg \
	$(metacitydir)/dark/button_close.svg \
	$(metacitydir)/dark/button_maximize_prelight.svg \
	$(metacitydir)/dark/button_maximize_pressed.svg \
	$(metacitydir)/dark/button_maximize.svg \
	$(metacitydir)/dark/button_menu_prelight.svg \
	$(metacitydir)/dark/button_menu_pressed.svg \
	$(metacitydir)/dark/button_menu.svg \
	$(metacitydir)/dark/button_minimize_prelight.svg \
	$(metacitydir)/dark/button_minimize_pressed.svg \
	$(metacitydir)/dark/button_minimize.svg \
	$(metacitydir)/dark/button_shade_prelight.svg \
	$(metacitydir)/dark/button_shade_pressed.svg \
	$(metacitydir)/dark/button_shade.svg \
	$(metacitydir)/dark/button_unshade_prelight.svg \
	$(metacitydir)/dark/button_unshade_pressed.svg \
	$(metacitydir)/dark/button_unshade.svg \
	$(metacitydir)/dark/max_button_unmaximize_prelight.svg \
	$(metacitydir)/dark/max_button_unmaximize_pressed.svg \
	$(metacitydir)/dark/max_button_unmaximize.svg \
	$(metacitydir)/dark/thumbnail.png
metacity_brila_xml_file = \
	$(metacitydir)/light/metacity-theme-2.xml \
	$(metacitydir)/light/metacity-theme-3.xml
metacity_brila_asset_file = \
	$(metacitydir)/light/button_close_prelight.svg \
	$(metacitydir)/light/button_close_pressed.svg \
	$(metacitydir)/light/button_close.svg \
	$(metacitydir)/light/button_maximize_prelight.svg \
	$(metacitydir)/light/button_maximize_pressed.svg \
	$(metacitydir)/light/button_maximize.svg \
	$(metacitydir)/light/button_menu_prelight.svg \
	$(metacitydir)/light/button_menu_pressed.svg \
	$(metacitydir)/light/button_menu.svg \
	$(metacitydir)/light/button_minimize_prelight.svg \
	$(metacitydir)/light/button_minimize_pressed.svg \
	$(metacitydir)/light/button_minimize.svg \
	$(metacitydir)/light/button_shade_prelight.svg \
	$(metacitydir)/light/button_shade_pressed.svg \
	$(metacitydir)/light/button_shade.svg \
	$(metacitydir)/light/button_unshade_prelight.svg \
	$(metacitydir)/light/button_unshade_pressed.svg \
	$(metacitydir)/light/button_unshade.svg \
	$(metacitydir)/light/max_button_unmaximize_prelight.svg \
	$(metacitydir)/light/max_button_unmaximize_pressed.svg \
	$(metacitydir)/light/max_button_unmaximize.svg \
	$(metacitydir)/light/thumbnail.png

xfwmdir   = $(srcdir)/xfwm4
xfwm_file = \
	$(xfwmdir)/dark/bottom-active.png \
	$(xfwmdir)/dark/bottom-inactive.png \
	$(xfwmdir)/dark/bottom-left-active.png \
	$(xfwmdir)/dark/bottom-left-inactive.png \
	$(xfwmdir)/dark/bottom-right-active.png \
	$(xfwmdir)/dark/bottom-right-inactive.png \
	$(xfwmdir)/dark/close-active.png \
	$(xfwmdir)/dark/close-inactive.png \
	$(xfwmdir)/dark/close-prelight.png \
	$(xfwmdir)/dark/close-pressed.png \
	$(xfwmdir)/dark/hide-active.png \
	$(xfwmdir)/dark/hide-inactive.png \
	$(xfwmdir)/dark/hide-prelight.png \
	$(xfwmdir)/dark/hide-pressed.png \
	$(xfwmdir)/dark/left-active.png \
	$(xfwmdir)/dark/left-inactive.png \
	$(xfwmdir)/dark/maximize-active.png \
	$(xfwmdir)/dark/maximize-inactive.png \
	$(xfwmdir)/dark/maximize-prelight.png \
	$(xfwmdir)/dark/maximize-pressed.png \
	$(xfwmdir)/dark/maximize-toggled-active.png \
	$(xfwmdir)/dark/maximize-toggled-inactive.png \
	$(xfwmdir)/dark/maximize-toggled-prelight.png \
	$(xfwmdir)/dark/maximize-toggled-pressed.png \
	$(xfwmdir)/dark/menu-active.png \
	$(xfwmdir)/dark/menu-inactive.png \
	$(xfwmdir)/dark/menu-prelight.png \
	$(xfwmdir)/dark/menu-pressed.png \
	$(xfwmdir)/dark/right-active.png \
	$(xfwmdir)/dark/right-inactive.png \
	$(xfwmdir)/dark/shade-active.png \
	$(xfwmdir)/dark/shade-inactive.png \
	$(xfwmdir)/dark/shade-prelight.png \
	$(xfwmdir)/dark/shade-pressed.png \
	$(xfwmdir)/dark/shade-toggled-active.png \
	$(xfwmdir)/dark/shade-toggled-inactive.png \
	$(xfwmdir)/dark/shade-toggled-prelight.png \
	$(xfwmdir)/dark/shade-toggled-pressed.png \
	$(xfwmdir)/dark/stick-active.png \
	$(xfwmdir)/dark/stick-inactive.png \
	$(xfwmdir)/dark/stick-prelight.png \
	$(xfwmdir)/dark/stick-pressed.png \
	$(xfwmdir)/dark/stick-toggled-active.png \
	$(xfwmdir)/dark/stick-toggled-inactive.png \
	$(xfwmdir)/dark/stick-toggled-prelight.png \
	$(xfwmdir)/dark/stick-toggled-pressed.png \
	$(xfwmdir)/dark/themerc \
	$(xfwmdir)/dark/title-1-active-shaded.png \
	$(xfwmdir)/dark/title-1-active.png \
	$(xfwmdir)/dark/title-1-inactive.png \
	$(xfwmdir)/dark/title-2-active.png \
	$(xfwmdir)/dark/title-2-inactive.png \
	$(xfwmdir)/dark/title-3-active.png \
	$(xfwmdir)/dark/title-3-inactive.png \
	$(xfwmdir)/dark/title-4-active.png \
	$(xfwmdir)/dark/title-4-inactive.png \
	$(xfwmdir)/dark/title-5-active.png \
	$(xfwmdir)/dark/title-5-inactive.png \
	$(xfwmdir)/dark/top-left-active-shaded.png \
	$(xfwmdir)/dark/top-left-active.png \
	$(xfwmdir)/dark/top-left-inactive.png \
	$(xfwmdir)/dark/top-right-active-shaded.png \
	$(xfwmdir)/dark/top-right-active.png \
	$(xfwmdir)/dark/top-right-inactive.png
xfwm_brila_file = \
	$(xfwmdir)/light/bottom-active.png \
	$(xfwmdir)/light/bottom-inactive.png \
	$(xfwmdir)/light/bottom-left-active.png \
	$(xfwmdir)/light/bottom-left-inactive.png \
	$(xfwmdir)/light/bottom-right-active.png \
	$(xfwmdir)/light/bottom-right-inactive.png \
	$(xfwmdir)/light/close-active.png \
	$(xfwmdir)/light/close-inactive.png \
	$(xfwmdir)/light/close-prelight.png \
	$(xfwmdir)/light/close-pressed.png \
	$(xfwmdir)/light/hide-active.png \
	$(xfwmdir)/light/hide-inactive.png \
	$(xfwmdir)/light/hide-prelight.png \
	$(xfwmdir)/light/hide-pressed.png \
	$(xfwmdir)/light/left-active.png \
	$(xfwmdir)/light/left-inactive.png \
	$(xfwmdir)/light/maximize-active.png \
	$(xfwmdir)/light/maximize-inactive.png \
	$(xfwmdir)/light/maximize-prelight.png \
	$(xfwmdir)/light/maximize-pressed.png \
	$(xfwmdir)/light/maximize-toggled-active.png \
	$(xfwmdir)/light/maximize-toggled-inactive.png \
	$(xfwmdir)/light/maximize-toggled-prelight.png \
	$(xfwmdir)/light/maximize-toggled-pressed.png \
	$(xfwmdir)/light/menu-active.png \
	$(xfwmdir)/light/menu-inactive.png \
	$(xfwmdir)/light/menu-prelight.png \
	$(xfwmdir)/light/menu-pressed.png \
	$(xfwmdir)/light/right-active.png \
	$(xfwmdir)/light/right-inactive.png \
	$(xfwmdir)/light/shade-active.png \
	$(xfwmdir)/light/shade-inactive.png \
	$(xfwmdir)/light/shade-prelight.png \
	$(xfwmdir)/light/shade-pressed.png \
	$(xfwmdir)/light/shade-toggled-active.png \
	$(xfwmdir)/light/shade-toggled-inactive.png \
	$(xfwmdir)/light/shade-toggled-prelight.png \
	$(xfwmdir)/light/shade-toggled-pressed.png \
	$(xfwmdir)/light/stick-active.png \
	$(xfwmdir)/light/stick-inactive.png \
	$(xfwmdir)/light/stick-prelight.png \
	$(xfwmdir)/light/stick-pressed.png \
	$(xfwmdir)/light/stick-toggled-active.png \
	$(xfwmdir)/light/stick-toggled-inactive.png \
	$(xfwmdir)/light/stick-toggled-prelight.png \
	$(xfwmdir)/light/stick-toggled-pressed.png \
	$(xfwmdir)/light/themerc \
	$(xfwmdir)/light/title-1-active-shaded.png \
	$(xfwmdir)/light/title-1-active.png \
	$(xfwmdir)/light/title-1-inactive.png \
	$(xfwmdir)/light/title-2-active.png \
	$(xfwmdir)/light/title-2-inactive.png \
	$(xfwmdir)/light/title-3-active.png \
	$(xfwmdir)/light/title-3-inactive.png \
	$(xfwmdir)/light/title-4-active.png \
	$(xfwmdir)/light/title-4-inactive.png \
	$(xfwmdir)/light/title-5-active.png \
	$(xfwmdir)/light/title-5-inactive.png \
	$(xfwmdir)/light/top-left-active-shaded.png \
	$(xfwmdir)/light/top-left-active.png \
	$(xfwmdir)/light/top-left-inactive.png \
	$(xfwmdir)/light/top-right-active-shaded.png \
	$(xfwmdir)/light/top-right-active.png \
	$(xfwmdir)/light/top-right-inactive.png

openboxdir   = $(srcdir)/openbox-3
openbox_file = \
	$(openboxdir)/close.xbm \
	$(openboxdir)/desk_toggled.xbm \
	$(openboxdir)/desk.xbm \
	$(openboxdir)/iconify.xbm \
	$(openboxdir)/max_toggled.xbm \
	$(openboxdir)/max.xbm \
	$(openboxdir)/shade_toggled.xbm \
	$(openboxdir)/shade.xbm
openbox_rc_file = \
	$(openboxdir)/themerc
openbox_rc_nokto_file = \
	$(openboxdir)/themerc-nokto
openbox_rc_brila_file = \
	$(openboxdir)/themerc-brila
openbox_compton_file = \
	$(openboxdir)/compton.conf

parallel_option = --null --no-notice --line-buffer --jobs 100%

# ***************************************************
# * Generate PNG images and clone SVG and XBM files *
# ***************************************************

# ignore -jN option for --enable-parallel
.NOTPARALLEL:

all:
if ENABLE_FLASHBACK
	cd $(srcdir)/asset/assets-metacity-scripts && \
	./clone-assets-metacity.sh && \
	./render-assets-metacity.sh
endif

if ENABLE_CINNAMON
if !ENABLE_FLASHBACK
	cd $(srcdir)/asset/assets-metacity-scripts && \
	./clone-assets-metacity.sh && \
	./render-assets-metacity.sh
endif
endif

if ENABLE_MATE
if !ENABLE_FLASHBACK
	cd $(srcdir)/asset/assets-metacity-scripts && \
	./clone-assets-metacity.sh && \
	./render-assets-metacity.sh
endif
endif

if ENABLE_XFCE
if ENABLE_PARALLEL
	cd $(srcdir)/asset/assets-xfwm-scripts && \
		./recolor-assets-xfwm.sh
	cd $(srcdir)/asset/assets-xfwm-scripts && \
	$(PARALLEL) $(parallel_option) ./render-assets-xfwm.sh ::: \
		button1 \
		button2 \
		edge \
		title
else
	cd $(srcdir)/asset/assets-xfwm-scripts && \
		./recolor-assets-xfwm.sh && \
		./render-assets-xfwm.sh all
endif
endif

if ENABLE_OPENBOX
	cd $(srcdir)/asset/assets-openbox-scripts && \
		./clone-assets-openbox.sh
endif

# *****************
# * Install files *
# *****************

install-data-local:
if ENABLE_FLASHBACK
	$(MKDIR_P) $(adaptadir)/metacity-1
	$(MKDIR_P) $(briladir)/metacity-1
	$(MKDIR_P) $(noktodir)/metacity-1
	cp -Rv $(metacity_xml_file) $(adaptadir)/metacity-1
	cp -Rv $(metacity_xml_file) $(noktodir)/metacity-1
	cp -Rv $(metacity_brila_xml_file) $(briladir)/metacity-1
	cp -Rv $(metacity_asset_file) $(adaptadir)/metacity-1
	cp -Rv $(metacity_asset_file) $(noktodir)/metacity-1
	cp -Rv $(metacity_brila_asset_file) $(briladir)/metacity-1
endif

if ENABLE_CINNAMON
if !ENABLE_FLASHBACK
	$(MKDIR_P) $(adaptadir)/metacity-1
	$(MKDIR_P) $(briladir)/metacity-1
	$(MKDIR_P) $(noktodir)/metacity-1
	cp -Rv $(metacity_xml_file) $(adaptadir)/metacity-1
	cp -Rv $(metacity_xml_file) $(noktodir)/metacity-1
	cp -Rv $(metacity_brila_xml_file) $(briladir)/metacity-1
	cp -Rv $(metacity_asset_file) $(adaptadir)/metacity-1
	cp -Rv $(metacity_asset_file) $(noktodir)/metacity-1
	cp -Rv $(metacity_brila_asset_file) $(briladir)/metacity-1
endif
endif

if ENABLE_MATE
if !ENABLE_FLASHBACK
	$(MKDIR_P) $(adaptadir)/metacity-1
	$(MKDIR_P) $(briladir)/metacity-1
	$(MKDIR_P) $(noktodir)/metacity-1
	cp -Rv $(metacity_xml_file) $(adaptadir)/metacity-1
	cp -Rv $(metacity_xml_file) $(noktodir)/metacity-1
	cp -Rv $(metacity_brila_xml_file) $(briladir)/metacity-1
	cp -Rv $(metacity_asset_file) $(adaptadir)/metacity-1
	cp -Rv $(metacity_asset_file) $(noktodir)/metacity-1
	cp -Rv $(metacity_brila_asset_file) $(briladir)/metacity-1
endif
endif

if ENABLE_XFCE
	$(MKDIR_P) $(adaptadir)/xfwm4
	$(MKDIR_P) $(noktodir)/xfwm4
	$(MKDIR_P) $(briladir)/xfwm4
	cp -Rv $(xfwm_file) $(adaptadir)/xfwm4
	cp -Rv $(xfwm_file) $(noktodir)/xfwm4
	cp -Rv $(xfwm_brila_file) $(briladir)/xfwm4
endif

if ENABLE_OPENBOX
	$(MKDIR_P) $(adaptadir)/openbox-3
	$(MKDIR_P) $(noktodir)/openbox-3
	$(MKDIR_P) $(briladir)/openbox-3
	cp -Rv $(openbox_file) $(adaptadir)/openbox-3
	cp -Rv $(openbox_rc_file) $(adaptadir)/openbox-3/themerc
	cp -Rv $(openbox_compton_file) $(adaptadir)/openbox-3/
	cp -Rv $(openbox_file) $(noktodir)/openbox-3
	cp -Rv $(openbox_rc_nokto_file) $(noktodir)/openbox-3/themerc
	cp -Rv $(openbox_file) $(briladir)/openbox-3
	cp -Rv $(openbox_rc_brila_file) $(briladir)/openbox-3/themerc
endif

# *******************
# * Uninstall files *
# *******************

uninstall-local:
if ENABLE_FLASHBACK
	test -e $(noktodir)/metacity-1 && rm -rfv $(noktodir)/metacity-1
	test -e $(adaptadir)/metacity-1 && rm -rfv $(adaptadir)/metacity-1
	test -e $(briladir)/metacity-1 && rm -rfv $(briladir)/metacity-1
endif

if ENABLE_CINNAMON
if !ENABLE_FLASHBACK
	test -e $(noktodir)/metacity-1 && rm -rfv $(noktodir)/metacity-1
	test -e $(adaptadir)/metacity-1 && rm -rfv $(adaptadir)/metacity-1
	test -e $(briladir)/metacity-1 && rm -rfv $(briladir)/metacity-1
endif
endif

if ENABLE_MATE
if !ENABLE_FLASHBACK
	test -e $(noktodir)/metacity-1 && rm -rfv $(noktodir)/metacity-1
	test -e $(adaptadir)/metacity-1 && rm -rfv $(adaptadir)/metacity-1
	test -e $(briladir)/metacity-1 && rm -rfv $(briladir)/metacity-1
endif
endif

if ENABLE_XFCE
	test -e $(noktodir)/xfwm4 && rm -rfv $(noktodir)/xfwm4
	test -e $(briladir)/xfwm4 && rm -rfv $(briladir)/xfwm4
	test -e $(adaptadir)/xfwm4 && rm -rfv $(adaptadir)/xfwm4
endif

if ENABLE_OPENBOX
	test -e $(noktodir)/openbox-3 && rm -rfv $(noktodir)/openbox-3
	test -e $(briladir)/openbox-3 && rm -rfv $(briladir)/openbox-3
	test -e $(adaptadir)/openbox-3 && rm -rfv $(adaptadir)/openbox-3
endif

# ****************************
# * Clean up generated files *
# ****************************

CLEANFILES =

if ENABLE_FLASHBACK
CLEANFILES += \
	$(metacitydir)/light/*.svg \
	$(metacitydir)/light/*.png \
	$(metacitydir)/dark/*.svg \
	$(metacitydir)/dark/*.png \
	$(srcdir)/asset/assets-metacity/common/button_close_pressed.svg \
	$(srcdir)/asset/assets-metacity/common/button_close_prelight.svg \
	$(srcdir)/asset/inkscape.log
endif

if ENABLE_CINNAMON
if !ENABLE_FLASHBACK
CLEANFILES += \
	$(metacitydir)/light/*.svg \
	$(metacitydir)/light/*.png \
	$(metacitydir)/dark/*.svg \
	$(metacitydir)/dark/*.png \
	$(srcdir)/asset/assets-metacity/common/button_close_pressed.svg \
	$(srcdir)/asset/assets-metacity/common/button_close_prelight.svg \
	$(srcdir)/asset/inkscape.log
endif
endif

if ENABLE_MATE
if !ENABLE_FLASHBACK
CLEANFILES += \
	$(metacitydir)/light/*.svg \
	$(metacitydir)/light/*.png \
	$(metacitydir)/dark/*.svg \
	$(metacitydir)/dark/*.png \
	$(srcdir)/asset/assets-metacity/common/button_close_pressed.svg \
	$(srcdir)/asset/assets-metacity/common/button_close_prelight.svg \
	$(srcdir)/asset/inkscape.log
endif
endif

if ENABLE_XFCE
CLEANFILES += \
	$(xfwmdir)/light/*.png \
	$(xfwmdir)/dark/*.png \
	$(srcdir)/asset/assets-xfwm/light/close-pressed.svg \
	$(srcdir)/asset/assets-xfwm/light/close-prelight.svg \
	$(srcdir)/asset/assets-xfwm/dark/close-pressed.svg \
	$(srcdir)/asset/assets-xfwm/dark/close-prelight.svg \
	$(srcdir)/asset/inkscape.log
endif

if ENABLE_OPENBOX
CLEANFILES += \
	$(openboxdir)/*.xbm
endif

DISTCLEANFILES = \
	$(CLEANFILES)
